fix: disable scroll script on mobile and minor fixes

--- a/styles.css
+++ b/styles.css
@@ -829,10 +829,11 @@ Media Query
 
   .curriculo-intro h3 {
     font-size: 1.8rem;
+    margin-bottom: 2rem;
   }
 
   .timeline {
-    padding: 100px 0;
+    padding: 70px 0 50px;
   }
 
   .entry .title:before {
